# tars

./: README.md  db.sqlite3  pyproject.toml
main/: admin.py  models.py  urls.py
main/migrations/: 0001_initial.py  0002_alter_blogpost_content.py
main/static/main/css/: style.css
main/templates/main/: about.html  base.html  blog_detail.html  blog_list.html  home.html  secret.html
main/templatetags/: markdown_filter.py
main/utils/: mta_bus.py
main/views/: __init__.py  blog_views.py  main_views.py  secret_view.py
tars/: asgi.py  settings.py  urls.py  wsgi.py
